<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/business_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/business_name"
        android:textSize="22dp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/currency_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/euro_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/euro_radio_button" />

        <RadioButton
            android:id="@+id/kenyan_shilling_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kenyan_shillings_radio_button" />

        <RadioButton
            android:id="@+id/indian_rupee_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/indian_rupee_radio_button" />

        <RadioButton
            android:id="@+id/emirati_dirham_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emirati_dirham_radio_button" />

        <RadioButton
            android:id="@+id/mexican_peso_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mexican_peso_radio_button" />

    </RadioGroup>

    <ImageView
        android:id="@+id/currency_imageview"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:padding="12dp"
        android:contentDescription="@string/image_content_description"
        android:src="@drawable/euro_image" />

    <TextView
        android:id="@+id/exchange_rate_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/euro_exchange_rate"
        android:textStyle="bold" />



    <Button
        android:id="@+id/purchase_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/purchase_button" />

</LinearLayout>