<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:padding="18dp"
            android:text="@string/back_button" />

        <TextView
            android:id="@+id/symbol_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_gravity="bottom"
            android:layout_marginEnd="12dp"
            android:text=""
            android:textSize="36sp" />


    </LinearLayout>

    <TextView
        android:id="@+id/exchange_rate_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:padding="20dp"
        android:text=""
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/currency_imageview"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:padding="12dp"
        android:contentDescription="@string/image_content_description"
        android:src="@drawable/euro_image"/>

    <EditText
        android:id="@+id/quantity_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="24dp"
        android:layout_gravity="center"
        android:text=""
        android:autofillHints="quantity"
        android:inputType="number"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/complete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="18dp"
        android:text="@string/complete_button" />

    <TextView
        android:id="@+id/total_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:padding="18dp"
        android:text=""
        android:textSize="30sp"
        android:textColor="#000000" />

</LinearLayout>